<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.navinbangar.sampleweatherapp.ui.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/currentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:layout_margin="@dimen/margin_8dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currentTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/current_temprature"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weatherSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/weather_summary"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/linearLayoutCloudCoverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="@dimen/margin_4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud_coverage" />

                        <TextView
                            android:id="@+id/cloudCoverageValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayoutWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="@dimen/margin_4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed" />

                        <TextView
                            android:id="@+id/windSpeedValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="@dimen/margin_4dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity" />

                        <TextView
                            android:id="@+id/humidityValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/daily"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separator_day_list"
                    style="@style/HorizontalDivider"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_4dp" />

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/line_chart_horizontal_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_4dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/lineChartFrameLayout"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chartHourlyWeather"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_4dp" />
                </LinearLayout>

            </HorizontalScrollView>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/Close" />

    </LinearLayout>
</ScrollView>


